split data by lazy

--- a/src/assets/i18n/dashboard/en.json
+++ b/src/assets/i18n/dashboard/en.json
@@ -30,5 +30,6 @@
     "Polish": "Polish",
     "Hindi": "Hindi",
     "Ukrainian": "Ukrainian",
-    "Graph": "Graph"
+    "Graph": "Graph",
+    "Unfortunately, for this moment there is no opportunity to continue desired action on current version of site": ""
 }
