--- a/src/assets/i18n/dashboard/_base.json
+++ b/src/assets/i18n/dashboard/_base.json
@@ -1,170 +1,391 @@
 {
 	" All rights are reserved": "",
+	" Sending any other coin or token to this address may result in the loss of your deposit": "",
+	" the code will be sent to you after transaction verification ": "",
+	"1-st level from your personal referral link": "",
 	"24h chg": "",
 	"24h hight": "",
 	"24h low": "",
 	"24h volume": "",
+	"2nd level from referrals of your referrals": "",
+	"3rd level of your referral structure deepness": "",
 	"About us": "",
-	"After all the tests are conducted, the updated dashboard will be available for real trading": "",
+	"Accepted": "",
+	"Address": "",
+	"Address for withdraw money": "",
+	"After making a withdrawal, you can track its progress in history on funds page": "",
+	"Already have an account?": "",
 	"Amount": "",
+	"Anyone who knows the code may recive the transfer": "",
+	"Are you sure you want to cancel selected order?": "",
 	"Are you sure you want to cancel this order?": "",
+	"Are you sure you want to revoke this request": "",
+	"Are you sure you want to revoke this request?": "",
 	"Authentication": "",
+	"Authenticator code": "",
+	"Authentification code": "",
 	"Authorise me": "",
+	"Available balance": "",
 	"Available balance:": "",
 	"Avaliable balance:": "",
 	"Avaliable:": "",
 	"Average Price": "",
+	"Avg": "",
 	"Back to log in": "",
+	"Back to withdrawal form": "",
 	"Balance": "",
 	"Balances": "",
 	"Book": "",
+	"Build a structures and earn money": "",
 	"Buy": "",
 	"Buy ": "",
+	"By registering you agree with": "",
 	"Cancel": "",
 	"Capture image form camera": "",
 	"Change %": "",
 	"Chat": "",
-	"Check spam or other folders\\": {
-		"0": ""
-	},
-	"Check the mail client works normally\\": {
-		"0": ""
-	},
+	"Check pin-code in your email": "",
+	"Check spam or other folders.": "",
+	"Check the mail client works normally.": "",
 	"Choose how to submit your ID": "",
 	"City": "",
+	"Coins will be deposited immediately after <b>2</b> network confirmations": "",
+	"Comission": "",
 	"Confirm the email": "",
+	"Congratulations!": "",
 	"Contacts and Support": "",
 	"Continue": "",
 	"Continue trading": "",
+	"Copied": "",
+	"Copy address": "",
+	"Copy id": "",
 	"Country": "",
+	"Create an account": "",
+	"Create code": "",
+	"Create new structure": "",
+	"Create structure": "",
 	"Created": "",
+	"Crypto": "",
+	"Crypto Balances": "",
+	"Crypto Withdrawal": "",
+	"Crypto deposit": "",
+	"Crypto withdrawal": "",
+	"Currency": "",
+	"Date": "",
+	"Date / Type": "",
 	"Delete": "",
+	"Deposit": "",
+	"Details": "",
+	"Disable GA": "",
+	"Do not withdraw directly to a crowdfund or ICO": "",
 	"Document photo": "",
+	"Download Google Authenticator on your mobile device": "",
 	"Download image from computer": "",
+	"Download in excel": "",
+	"Download in excell": "",
 	"Download photo of document": "",
+	"Earned": "",
 	"Edit order": "",
 	"Email": "",
-	"Email with activation link has been sent to your email address": "",
+	"Email is required": "",
+	"Email with activation link has been sent to your email address . Please, check and follow the instructions . If you can't find our mail, then please try to send the link again .": "",
+	"Email:": "",
+	"Enable GA": "",
+	"Enter 2FA code": "",
 	"Enter info": "",
+	"Enter memo ID": "",
 	"Enter the captcha": "",
+	"Enter the phone number": "",
+	"Enter valid email to transfer": "",
+	"Enterh the autentification code": "",
+	"Estimated Holdings:": "",
 	"Estimated holdings": "",
 	"Example": "",
+	"Exchange comission:": "",
+	"Failed to get google url": "",
+	"Failed to set your google auth code": "",
 	"Fav": "",
 	"Favorites": "",
 	"Fee": "",
 	"Fee:": "",
+	"Fiat": "",
+	"Fiat Balances": "",
+	"Fiat Deposit": "",
+	"Fiat Withdrawal": "",
+	"Fiat deposit": "",
+	"Fiat withdrawal": "",
 	"File not valid": "",
+	"Filled": "",
+	"Filters": "",
 	"First name": "",
-	"Forgot password": "",
-	"Forgot password\\?": "",
+	"Forgot password?": "",
+	"From": "",
 	"Funds": "",
+	"Funds were sent": "",
+	"Generate new address": "",
+	"Get inner transfer": "",
+	"Get verification code": "",
 	"Go to registration form": "",
 	"Graph": "",
+	"Has referals": "",
+	"Hide all canceled": "",
+	"Hide zero balances": "",
 	"History": "",
 	"Hold up a handwritten note with the phrase Exrates plus today's date": "",
-	"How to set\\?": "",
+	"How it works?": "",
+	"How much I will get?": "",
+	"How much I will get\\?": "",
+	"How to set?": "",
+	"How would you like to refill the balance?": "",
+	"How would you like to send the money?": "",
+	"Id": "",
 	"Identity Verification": "",
-	"If necessary, please repeat the registration process": "",
-	"If you can't find our mail, then please try to send the link again": "",
 	"If you haven't received the email, do the following:": "",
+	"If you want to punish him with brute force - act": "",
+	"In Orders": "",
+	"In Withdraw": "",
+	"In total": "",
+	"Incorrect code.": "",
+	"Inner transfer": "",
+	"Instant transfer": "",
+	"Invalid code": "",
+	"Invite people by referal link": "",
+	"Join our channel": "",
 	"Keyword of the coin": "",
 	"Last name": "",
 	"Last price": "",
+	"Level": "",
 	"Limit Sell Order Created!": "",
 	"Limit Sell Order not created!": "",
+	"Link": "",
 	"Log in": "",
 	"Log out": "",
 	"Login": "",
-	"Lost Your Google Authenticator": "",
+	"Lost Your Google Authenticator?": "",
+	"Make <b>password-protected</b> personal transfer to another user by his <b>email or nickname</b>": "",
+	"Make <b>password-protected</b> transfer": "",
+	"Make Inner transfer": "",
+	"Make Inner transfer by email or nickname": "",
+	"Make Inner transfer by email or nickname protected by code": "",
+	"Make Inner transfer protected by code": "",
 	"Make photo of document": "",
+	"Market": "",
+	"Market/Date": "",
 	"Markets": "",
+	"Max sum for withdrawal": "",
+	"Memo ID": "",
+	"Merchant comission:": "",
+	"Message price": "",
+	"Minimum sum for withdrawal": "",
 	"Mobile applications<br>to launch in 2019:": "",
+	"My awesome structure": "",
+	"My awesome structure 2": "",
+	"My awesome structure 3": "",
+	"Name": "",
 	"New user": "",
 	"News": "",
 	"No": "",
-	"No account": "",
+	"No account?": "",
+	"No matching records found": "",
 	"Now you can login <br> with your new password": "",
-	"Now you have an opportunity to test a redesigned demo version go the dashboard": "",
 	"Ok": "",
+	"Ok, I did it": "",
+	"On confirmation": "",
+	"Once you have submitted your withdrawal request, we will send a confirmation email": "",
+	"Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email": "",
+	"Once you have submitted your withdrawal request, we will send a confirmation email.Please then click on the confirmation link in your email": "",
+	"Only numbers are allowed.": "",
 	"Open": "",
 	"Open orders": "",
 	"Order book": "",
+	"Order filters": "",
 	"Order id": "",
 	"Order type": "",
 	"Orders": "",
 	"Orders history": "",
 	"Pair": "",
 	"Pair / Vol": "",
+	"Pair/Date": "",
 	"Password": "",
+	"Payment system": "",
+	"Pending": "",
+	"Pending Requests": "",
+	"Pending requests": "",
+	"Percent from comission": "",
+	"Percent:": "",
+	"Phone number": "",
+	"Pin code": "",
 	"Pincode": "",
+	"Please enter the phone number.": "",
+	"Please enter the transfer code to get money": "",
 	"Please fill this form below": "",
-	"Please, check and follow the instructions": "",
-	"Please, enter valid email address": "",
-	"Please, go to": "",
+	"Please go to": "",
+	"Please note:": "",
+	"Please save a backup of your <br> recovery key": "",
+	"Please then click on the confirmation link in your email": "",
+	"Please, enter valid email address.": "",
 	"Postal code": "",
 	"Price": "",
+	"Price in": "",
 	"Privacy Policy": "",
+	"Private code was created successfully": "",
 	"Progress": "",
+	"Protected by code & mail": "",
+	"Protected by code only": "",
+	"Put the pincode from your email": "",
 	"Rate for": "",
+	"Receive transfer": "",
+	"Received": "",
+	"Recieve the charges fromtheir comission": "",
+	"Referal link": "",
+	"Referals": "",
 	"Referral": "",
 	"Referral charges": "",
 	"Referral structure": "",
+	"Refill": "",
+	"Refill balance": "",
+	"Refill money": "",
 	"Registration": "",
+	"Rejected": "",
+	"Request info": "",
+	"Request was created": "",
+	"Request was created!": "",
+	"Reserve": "",
 	"Reset password": "",
+	"Reseting your two - factor authentication requires opening a support ticket and may take up to 48 hours to address.": "",
 	"Residental address": "",
+	"Revoke": "",
 	"Save": "",
 	"Search": "",
-	"Seems, that your user is still inactive": "",
+	"See": "",
+	"See results": "",
+	"Seems, that your user is still inactive.": "",
 	"Select currency": "",
 	"Sell": "",
 	"Sell ": "",
 	"Send activation email again": "",
-	"Set email address whitelist\\": {
-		"0": ""
-	},
+	"Send instant internal transfer to another account using their email or nickname": "",
+	"Send money": "",
+	"Send only": "",
+	"Set email address whitelist.": "",
+	"Set merchant adress for withdrawal": "",
 	"Settings": "",
+	"Should be at least": "",
+	"Show zero": "",
 	"Sign up": "",
+	"Sorry but you dont have enough USD on your balance to connect two factor authorisation by sms": "",
+	"Sorry, refill is closed for current moment": "",
+	"Sorry, refill is closed for current moment!": "",
+	"Sorry.": "",
+	"Status": "",
 	"Status of order": "",
 	"Status:": "",
 	"Stop": "",
+	"Structure name": "",
 	"Submission received": "",
 	"Submit": "",
 	"Submit a coin for listing": "",
+	"Summary earned": "",
+	"Summary earned:": "",
 	"Terms and Conditions": "",
+	"Terms of Use": "",
 	"Thank you!": "",
-	"This field is required": "",
+	"They start trade and pay comission": "",
+	"This code changes each time you enable 2FA. If you disable 2FA this code will no longer be valid.": "",
+	"This code has been used already.": "",
+	"This field is required.": "",
 	"Time": "",
-	"To find out the reason of blocking - contact the exchange support service": "",
+	"To": "",
+	"To attach this number, click the 'Pay and connect' button, the sms with the registration code will be sent to you. Each sms paid. the cost\r\n      of one message for your phone number is": "",
+	"To the next step": "",
 	"Tools": "",
 	"Total": "",
+	"Total Price": "",
+	"Total balance": "",
+	"Total comission:": "",
+	"Total with comission:": "",
 	"Trade": "",
 	"Trade history": "",
 	"Trading": "",
+	"Trading price": "",
+	"Transaction date": "",
+	"Transaction hash": "",
 	"Transaction history": "",
+	"Transaction id": "",
+	"Transactions filters": "",
+	"Transfer": "",
+	"Transfer code": "",
+	"Two factor authentication": "",
+	"Two-Factor authentication by Google Authenticator": "",
+	"Two-Factor authentication by google authentificator": "",
+	"Two-Factor authentication by phone number": "",
+	"Txid": "",
 	"Type": "",
-	"Unfortunately now you are not able to trade on this version of the website": "",
-	"Unfortunately, for this moment there is no opportunity to continue desired action on current version of site": "",
+	"Unfortunately now you are not able to trade on this version of the website.": "",
+	"Unfortunately, for this moment there is no opportunity to continue desired action on current version of site. Please, go to <a href=\"https://exrates.me\" class=\"link link--underline\" target=\"_blank\">exrates.me</a> to proceed your action.": "",
 	"Upload image of your face": "",
+	"Use Google Authenticator to scan the QRCode": "",
 	"Use google authenticator to generate pincode": "",
+	"Use this code to get the transfer": "",
 	"Vol": "",
 	"Volume": "",
-	"WPin code is required": "",
-	"Wrong email or password": "",
-	"Wrong pincode, new pincode is sent": "",
+	"WPin code is required!": "",
+	"We have good news for you! It’s more then 24 currencies available for deposit right now:": "",
+	"We will not credit your account with tokens from that sale": "",
+	"Withdraw": "",
+	"Wrong email": "",
+	"Wrong email or password!": "",
+	"Wrong pincode, new pincode is sent!": "",
 	"Yes": "",
+	"You are here": "",
 	"You are not allowed to access": "",
 	"You can check status of your verification on your": "",
-	"You have already used the link to confirm your registration": "",
-	"Your account has been blocked": "",
+	"You can check the status of completed transfer in the": "",
+	"You can track the progress in Pending requests table on": "",
+	"You can track the progress in Pending requests table on ": "",
+	"You can track the progress in history section on": "",
+	"You have": "",
+	"You have already used the link to confirm your registration. If necessary, please repeat the registration process.": "",
+	"You should enter": "",
+	"You should have positive balance in": "",
+	"You successfuly got": "",
+	"You want to transfer:": "",
+	"You want to withdraw:": "",
+	"You will get 10% from fees of your referrals": "",
+	"You will get 20% from fees of your referrals": "",
+	"You will get 30% from fees of your referrals": "",
+	"Your account has been blocked. To find out the reason of blocking - contact the exchange support service.": "",
 	"Your cam": "",
-	"Your ip is blocked": "",
+	"Your ip is blocked!": "",
+	"Your payment was declined because of the administrator's harmfulness": "",
 	"Your photo": "",
+	"address": "",
+	"address for withdrawal": "",
+	"close": "",
+	"for": "",
+	"funds": "",
+	"itle\">": "",
 	"login": "",
 	"logout": "",
+	"on your account": "",
 	"or": "",
 	"orders": "",
+	"page": "",
 	"profile page": "",
+	"remove": "",
+	"results": "",
+	"server error": "",
 	"step": "",
-	"to proceed your action": "",
-	"© 2018 EXRATES LTD trade marks belong to their corresponding owners": ""
+	"table": "",
+	"this email not found": "",
+	"to deposit": "",
+	"to make a payment": "",
+	"to: All Balance": "",
+	"to: My awesome structure": "",
+	"to: Pending Requests": "",
+	"user can get the money if he knows the transfer code": "",
+	"{{\"Please save a backup of your": "",
+	"© 2018 EXRATES LTD trade marks belong to their corresponding owners": "",
+	"Аvailable": "",
+	"Сonfirm your details": ""
 }
