--- a/src/assets/i18n/dashboard/_base.json
+++ b/src/assets/i18n/dashboard/_base.json
@@ -11,8 +11,11 @@
 	"3rd level of your referral structure deepness": "",
 	"About us": "",
 	"Accepted": "",
+	"Account changes": "",
+	"Add Nickname": "",
 	"Address": "",
 	"Address for withdraw money": "",
+	"After creating a nickname, it will not be possible to change it": "",
 	"After making a withdrawal, you can track its progress in history on funds page": "",
 	"Already have an account?": "",
 	"Amount": "",
@@ -27,7 +30,6 @@
 	"Authorise me": "",
 	"Available balance": "",
 	"Available balance:": "",
-	"Avaliable balance:": "",
 	"Avaliable:": "",
 	"Average Price": "",
 	"Avg": "",
@@ -39,16 +41,19 @@
 	"Build a structures and earn money": "",
 	"Buy": "",
 	"Buy ": "",
+	"By Google": "",
 	"By registering you agree with": "",
 	"Cancel": "",
 	"Capture image form camera": "",
 	"Change %": "",
+	"Change password": "",
 	"Chat": "",
 	"Check pin-code in your email": "",
 	"Check spam or other folders.": "",
 	"Check the mail client works normally.": "",
 	"Choose how to submit your ID": "",
 	"City": "",
+	"Click on button below after it": "",
 	"Coins will be deposited immediately after <b>2</b> network confirmations": "",
 	"Comission": "",
 	"Confirm the email": "",
@@ -71,12 +76,14 @@
 	"Crypto deposit": "",
 	"Crypto withdrawal": "",
 	"Currency": "",
+	"Current password": "",
 	"Date": "",
 	"Date / Type": "",
 	"Delete": "",
 	"Deposit": "",
 	"Details": "",
 	"Disable GA": "",
+	"Disable Google 2FA": "",
 	"Do not withdraw directly to a crowdfund or ICO": "",
 	"Document photo": "",
 	"Download Google Authenticator on your mobile device": "",
@@ -84,26 +91,34 @@
 	"Download in excel": "",
 	"Download in excell": "",
 	"Download photo of document": "",
+	"Driver license": "",
 	"Earned": "",
 	"Edit order": "",
 	"Email": "",
+	"Email Notifications": "",
+	"Email confirmed": "",
 	"Email is required": "",
-	"Email with activation link has been sent to your email address . Please, check and follow the instructions . If you can't find our mail, then please try to send the link again .": "",
+	"Email with activation link has been sent to your email address. Please, check and follow the instructions. If you can't find our mail, then please try to send the link again.": "",
 	"Email:": "",
+	"Enable": "",
 	"Enable GA": "",
 	"Enter 2FA code": "",
 	"Enter info": "",
 	"Enter memo ID": "",
 	"Enter the captcha": "",
 	"Enter the phone number": "",
+	"Enter this code to telegram bot": "",
 	"Enter valid email to transfer": "",
 	"Enterh the autentification code": "",
 	"Estimated Holdings:": "",
 	"Estimated holdings": "",
+	"Everytime when you need to to pass two factor authorisation bot will generate code fore you automaticaly.": "",
 	"Example": "",
 	"Exchange comission:": "",
 	"Failed to get google url": "",
 	"Failed to set your google auth code": "",
+	"Failed to update your nickname!": "",
+	"Failed to update your password!": "",
 	"Fav": "",
 	"Favorites": "",
 	"Fee": "",
@@ -117,7 +132,10 @@
 	"File not valid": "",
 	"Filled": "",
 	"Filters": "",
+	"Finish registration": "",
 	"First name": "",
+	"For inner transactions users could use your nickname instead of email.": "",
+	"For sure.": "",
 	"Forgot password?": "",
 	"From": "",
 	"Funds": "",
@@ -126,12 +144,14 @@
 	"Get inner transfer": "",
 	"Get verification code": "",
 	"Go to registration form": "",
+	"Google Authenticator": "",
 	"Graph": "",
 	"Has referals": "",
 	"Hide all canceled": "",
 	"Hide zero balances": "",
 	"History": "",
 	"Hold up a handwritten note with the phrase Exrates plus today's date": "",
+	"Hours": "",
 	"How it works?": "",
 	"How much I will get?": "",
 	"How much I will get\\?": "",
@@ -140,13 +160,16 @@
 	"How would you like to send the money?": "",
 	"Id": "",
 	"Identity Verification": "",
+	"Identity card": "",
 	"If you haven't received the email, do the following:": "",
 	"If you want to punish him with brute force - act": "",
 	"In Orders": "",
 	"In Withdraw": "",
 	"In total": "",
+	"Inable colors for color-blinds": "",
 	"Incorrect code.": "",
 	"Inner transfer": "",
+	"Input / output": "",
 	"Instant transfer": "",
 	"Invalid code": "",
 	"Invite people by referal link": "",
@@ -159,6 +182,7 @@
 	"Limit Sell Order not created!": "",
 	"Link": "",
 	"Log in": "",
+	"Log in, Withdrawal, Inner transfer": "",
 	"Log out": "",
 	"Login": "",
 	"Lost Your Google Authenticator?": "",
@@ -177,23 +201,32 @@
 	"Merchant comission:": "",
 	"Message price": "",
 	"Minimum sum for withdrawal": "",
+	"Minutes": "",
 	"Mobile applications<br>to launch in 2019:": "",
 	"My awesome structure": "",
 	"My awesome structure 2": "",
 	"My awesome structure 3": "",
 	"Name": "",
+	"New password": "",
 	"New user": "",
 	"News": "",
+	"Next step": "",
+	"Nickname": "",
+	"Nickname can be specified only 1 time": "",
 	"No": "",
 	"No account?": "",
 	"No matching records found": "",
+	"Notifications": "",
+	"Notifications from administrators": "",
 	"Now you can login <br> with your new password": "",
+	"Now, we need to create strong password.": "",
 	"Ok": "",
 	"Ok, I did it": "",
 	"On confirmation": "",
 	"Once you have submitted your withdrawal request, we will send a confirmation email": "",
 	"Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email": "",
 	"Once you have submitted your withdrawal request, we will send a confirmation email.Please then click on the confirmation link in your email": "",
+	"Only (A-z), (–), (=) are allowed": "",
 	"Only numbers are allowed.": "",
 	"Open": "",
 	"Open orders": "",
@@ -203,10 +236,16 @@
 	"Order type": "",
 	"Orders": "",
 	"Orders history": "",
+	"Other messages": "",
 	"Pair": "",
 	"Pair / Vol": "",
 	"Pair/Date": "",
+	"Passport": "",
 	"Password": "",
+	"Password cannot be more than 20 characters long": "",
+	"Password is not matches.": "",
+	"Password is required.": "",
+	"Password must be between 8 and 20 symbols, contain letters and numbers.": "",
 	"Payment system": "",
 	"Pending": "",
 	"Pending Requests": "",
@@ -224,6 +263,7 @@
 	"Please save a backup of your <br> recovery key": "",
 	"Please then click on the confirmation link in your email": "",
 	"Please, enter valid email address.": "",
+	"Plug in telegram bot": "",
 	"Postal code": "",
 	"Price": "",
 	"Price in": "",
@@ -247,6 +287,7 @@
 	"Refill money": "",
 	"Registration": "",
 	"Rejected": "",
+	"Repeat password": "",
 	"Request info": "",
 	"Request was created": "",
 	"Request was created!": "",
@@ -267,10 +308,16 @@
 	"Send instant internal transfer to another account using their email or nickname": "",
 	"Send money": "",
 	"Send only": "",
+	"Server error. Try again.": "",
+	"Session Time": "",
+	"Session must within 5 and 1440 mins (24 hours)": "",
+	"Session period is not updated!": "",
+	"Session period is updated!": "",
 	"Set email address whitelist.": "",
 	"Set merchant adress for withdrawal": "",
 	"Settings": "",
 	"Should be at least": "",
+	"Should have 8 chars at least, symbols and numbers.": "",
 	"Show zero": "",
 	"Sign up": "",
 	"Sorry but you dont have enough USD on your balance to connect two factor authorisation by sms": "",
@@ -290,13 +337,18 @@
 	"Terms and Conditions": "",
 	"Terms of Use": "",
 	"Thank you!": "",
+	"The passwords do not match.": "",
 	"They start trade and pay comission": "",
 	"This code changes each time you enable 2FA. If you disable 2FA this code will no longer be valid.": "",
 	"This code has been used already.": "",
 	"This field is required.": "",
+	"This value must be within 0 and 24.": "",
+	"This value must be within 0 and 59.": "",
 	"Time": "",
+	"Time period, when you stayed logged in system after the last action": "",
 	"To": "",
-	"To attach this number, click the 'Pay and connect' button, the sms with the registration code will be sent to you. Each sms paid. the cost\r\n      of one message for your phone number is": "",
+	"To attach this number, click the 'Pay and connect' button, the sms with the registration code will be sent to you. Each sms paid. the cost of one message for your phone number is": "",
+	"To plug in two factor authorisation telegram bot go to": "",
 	"To the next step": "",
 	"Tools": "",
 	"Total": "",
@@ -316,22 +368,29 @@
 	"Transfer": "",
 	"Transfer code": "",
 	"Two factor authentication": "",
+	"Two-Factor Authentication": "",
+	"Two-Factor authentication": "",
 	"Two-Factor authentication by Google Authenticator": "",
 	"Two-Factor authentication by google authentificator": "",
 	"Two-Factor authentication by phone number": "",
+	"Two-Factor authentication by telegram": "",
 	"Txid": "",
 	"Type": "",
 	"Unfortunately now you are not able to trade on this version of the website.": "",
 	"Unfortunately, for this moment there is no opportunity to continue desired action on current version of site. Please, go to <a href=\"https://exrates.me\" class=\"link link--underline\" target=\"_blank\">exrates.me</a> to proceed your action.": "",
+	"Update password": "",
 	"Upload image of your face": "",
 	"Use Google Authenticator to scan the QRCode": "",
 	"Use google authenticator to generate pincode": "",
 	"Use this code to get the transfer": "",
+	"View": "",
 	"Vol": "",
 	"Volume": "",
 	"WPin code is required!": "",
+	"We dont know what exactly, but we will!": "",
 	"We have good news for you! It’s more then 24 currencies available for deposit right now:": "",
 	"We will not credit your account with tokens from that sale": "",
+	"When 24 hours no minutes are allowed.": "",
 	"Withdraw": "",
 	"Wrong email": "",
 	"Wrong email or password!": "",
@@ -348,6 +407,7 @@
 	"You have already used the link to confirm your registration. If necessary, please repeat the registration process.": "",
 	"You should enter": "",
 	"You should have positive balance in": "",
+	"You should pass identity verification to achive something usefull and important.": "",
 	"You successfuly got": "",
 	"You want to transfer:": "",
 	"You want to withdraw:": "",
@@ -357,12 +417,15 @@
 	"Your account has been blocked. To find out the reason of blocking - contact the exchange support service.": "",
 	"Your cam": "",
 	"Your ip is blocked!": "",
+	"Your nickname is successfully updated!": "",
+	"Your password is successfully updated!": "",
 	"Your payment was declined because of the administrator's harmfulness": "",
 	"Your photo": "",
 	"address": "",
 	"address for withdrawal": "",
 	"close": "",
 	"for": "",
+	"for safety, to confirm that you it is you": "",
 	"funds": "",
 	"itle\">": "",
 	"login": "",
@@ -375,6 +438,7 @@
 	"remove": "",
 	"results": "",
 	"server error": "",
+	"should have 8 chars at least, symbols and numbers": "",
 	"step": "",
 	"table": "",
 	"this email not found": "",
@@ -383,6 +447,7 @@
 	"to: All Balance": "",
 	"to: My awesome structure": "",
 	"to: Pending Requests": "",
+	"use only (A-z), (–), (=) symbols,": "",
 	"user can get the money if he knows the transfer code": "",
 	"{{\"Please save a backup of your": "",
 	"© 2018 EXRATES LTD trade marks belong to their corresponding owners": "",
