--- a/src/assets/i18n/static-files/contacts_base.json
+++ b/src/assets/i18n/static-files/contacts_base.json
@@ -2,18 +2,18 @@
 	"China": "",
 	"Contacts": "",
 	"Contacts & representatives": "",
-	"Dear community please visit our representative offices and get detailed information about the listing and partnership with Exrates": "",
+	"Dear community please visit our representative offices and get detailed information about the listing and partnership with Exrates.": "",
 	"Email": "",
 	"Headquarters:": "",
 	"Listing Manager": "",
 	"Name": "",
 	"Representative office location:": "",
 	"Sales Specialist": "",
-	"Send form & Exrates team will contact you next 8 hours": "",
+	"Send form & Exrates team will contact you next 8 hours.": "",
 	"Submit": "",
 	"Switzerland": "",
 	"Telegram": "",
 	"Text": "",
-	"This field is required": "",
-	"You can find us": ""
+	"This field is required.": "",
+	"You can find us:": ""
 }
