--- a/src/assets/i18n/static-files/zh.json
+++ b/src/assets/i18n/static-files/zh.json
@@ -1,27 +1,28 @@
 {
-  "Contacts": "콘택트 렌즈",
-  "Contacts & representatives": "연락처 및 담당자",
-  "Dear community please visit our representative offices and get detailed information about the listing and partnership with Exrates.": "친애하는 커뮤니티는 우리 대표 사무소를 방문하여 Exrates와 함께 업체 정보 및 파트너쉽에 대한 자세한 정보를 얻으십시오.",
-  "Email": "이메일",
-  "Email cannot be more than 40 characters long": "이메일 길이는 40자를 초과 할 수 없습니다.",
-  "Email cannot contain special characters except period (.), plus (+), underscore (_) and dash (-)": "이메일에는 마침표 (.), 더하기 (+), 밑줄 (_) 및 대시 (-)를 제외한 특수 문자를 사용할 수 없습니다.",
-  "Email is required": "이메일이 필요합니다.",
-  "Exrates team will contact you next 8 hours.": "팀에서 다음 8 시간 후에 연락 드리겠습니다.",
-  "Head of Sales": "판매 책임자",
-  "Headquarters:": "본부",
-  "Name": "이름",
-  "Name cannot be more than 30 characters long": "이름은 30자를 초과 할 수 없습니다.",
-  "Name is required.": "이름은 필수 항목입니다.",
-  "Sales Specialist": "영업 전문가",
-  "Send form & Exrates team will contact you next 8 hours.": "보내기 양식 & Exrates 팀은 다음 8 시간 동안 귀하에게 연락합니다.",
-  "Submit": "제출",
-  "Switzerland": "Switzerland",
-  "Telegram": "Telegram",
-  "Text": "본문",
-  "Text cannot be more than 400 characters long.": "텍스트 길이는 400자를 초과 할 수 없습니다.",
-  "Text is required.": "텍스트가 필요합니다.",
-  "This field cannot be more than 30 characters long": "이 입력란의 길이는 30자를 초과 할 수 없습니다.",
-  "Wrong email": "잘못된 이메일",
-  "You can find us:": "너는 우리를 찾을 수있다.",
-  "Your message was sent successfully!": "메시지가 성공적으로 전송되었습니다."
+  "Contacts": "联系方式",
+  "Contacts & representatives": "代表及联系方式",
+  "Dear community please visit our representative offices and get detailed information about the listing and partnership with Exrates.": "您有机会访问我们的代表处，并获得有关上币以及与Exrates合作的详细信息。",
+  "Email": "邮箱地址",
+  "Email cannot be more than 40 characters long": "邮箱地址不得超过40个字符",
+  "Email cannot contain special characters except period (.), plus (+), underscore (_) and dash (-)": "邮箱地址不能包含除点字符（。），加号（+）或短划线（ - ）以外的特殊字符",
+  "Email is required": "输入邮箱",
+  "Exrates team will contact you next 8 hours.": "Exrates团队将在8小时内将会与您联系。",
+  "Head of Sales": "销售主管",
+  "Headquarters:": "总部",
+  "Name": "名字",
+  "Name cannot be more than 30 characters long": "名称不能超过30个字符",
+  "Name is required.": "输入名字",
+  "Sales Specialist": "销售专员",
+  "Send form & Exrates team will contact you next 8 hours.": "提交之后, Exrates团队将在8小时内与您联系",
+  "Submit": "发送",
+  "Switzerland": "瑞士",
+  "Telegram": "电报",
+  "Text": "消息",
+  "Text cannot be more than 400 characters long.": "信息内容不得超出400个字符",
+  "Text is required.": "必填",
+  "This field cannot be more than 30 characters long": "该字段不能超过30个字符",
+  "Wrong email": "无效的邮箱地址",
+  "You can find us:": "您将能在以下地址找到我们:",
+  "Your message was sent successfully!": "消息发送成功!"
+
 }
