fix translate bugs

--- a/src/assets/i18n/dashboard/id.json
+++ b/src/assets/i18n/dashboard/id.json
@@ -126,7 +126,7 @@
   "Download in excell": "Unduh di Excel",
   "Download photo of document": "Unduh foto dokumen",
   "Edit order": "Edit pesanan",
-  "Email": "E-mail",
+  "Email": "Email",
   "Email Notifications": "Notifikasi email",
   "Email cannot contain special characters except period (.), plus (+), underscore (_) and dash (-)": "Email tidak dapat berisi karakter khusus kecuali titik (.), Plus (+), garis bawah (_) dan tanda hubung (-)",
   "Email confirmed": "Email dikonfirmasi",
