make granph responsive to lang change, fetch last addition keys and attach to DEVEX-2225

--- a/src/assets/i18n/dashboard/en.json
+++ b/src/assets/i18n/dashboard/en.json
@@ -425,6 +425,7 @@
   "To the next step": "To the next step",
   "Token Allocaation": "Token Allocation",
   "Tools": "Tools",
+  "Tool": "Tool",
   "Total": "Total",
   "Total Price": "Total Price",
   "Total balance": "Total balance",
