--- a/src/assets/i18n/dashboard/id.json
+++ b/src/assets/i18n/dashboard/id.json
@@ -425,6 +425,7 @@
   "To the next step": "Ke langkah selanjutnya",
   "Token Allocaation": "Alokasi Token",
   "Tools": "Alat",
+  "Tool": "Alat",
   "Total": "Total",
   "Total Price": "Total harga",
   "Total balance": "Saldo total",
