--- a/src/assets/i18n/dashboard/ko.json
+++ b/src/assets/i18n/dashboard/ko.json
@@ -425,6 +425,7 @@
   "To the next step": "다음 단계로",
   "Token Allocaation": "토큰 할당",
   "Tools": "도구들",
+  "Tool": "도구들",
   "Total": "합계",
   "Total Price": "총 가격",
   "Total balance": "전체 균형",
