--- a/src/assets/i18n/dashboard/ru.json
+++ b/src/assets/i18n/dashboard/ru.json
@@ -426,6 +426,7 @@
   "To the next step": "Следующий шаг",
   "Token Allocaation": "Распределение токенов",
   "Tools": "Инструменты",
+  "Tool": "Инструменты",
   "Total": "Всего",
   "Total Price": "Общая сумма",
   "Total balance": "Общий баланс",
@@ -537,4 +538,5 @@
   "© 2019 EXRATES LTD trade marks belong to their corresponding owners. All rights are reserved": "© 2019 EXRATES LTD trademarks belong to their corresponding owners. All rights are reserved",
   "Аvailable": "Доступно",
   "Сonfirm your details": "Подтвердите"
+
 }
