--- a/src/assets/i18n/dashboard/zh.json
+++ b/src/assets/i18n/dashboard/zh.json
@@ -426,6 +426,7 @@
   "To the next step": "下一步",
   "Token Allocaation": "代币分配",
   "Tools": "工具",
+  "Tool": "工具",
   "Total": "合计",
   "Total Price": "总额",
   "Total balance": "总余额",
