--- a/src/assets/i18n/dashboard/en.json
+++ b/src/assets/i18n/dashboard/en.json
@@ -56,7 +56,7 @@
   "Buy Now": "Buy Now",
   "By Google": "By Google",
   "By registering you agree with": "By registering you agree with",
-  "Cancel": "By registering you agree with",
+  "Cancel": "Cancel",
   "Cancel all": "Cancel all",
   "Capture image form camera": "Capture image from the camera",
   "Cerl Token sale and economics": "",
