--- a/src/assets/i18n/dashboard/en.json
+++ b/src/assets/i18n/dashboard/en.json
@@ -100,7 +100,7 @@
   "Create Account Qubera": "Create Qubera Account",
   "Create an account": "Create an account",
   "Create code": "Create a code",
-  "Create new key": "Create new ke",
+  "Create new key": "Create new key",
   "Created": "Created",
   "Crypto": "Crypto",
   "Crypto Balances": "Crypto Balances",
