--- a/src/assets/i18n/dashboard/en.json
+++ b/src/assets/i18n/dashboard/en.json
@@ -104,8 +104,8 @@
   "Created": "Created",
   "Crypto": "Crypto",
   "Crypto Balances": "Crypto Balances",
-  "Crypto Withdrawal": "Crypto Withdrawals",
-  "Crypto deposit": "Crypto Deposits",
+  "Crypto Withdrawal": "Crypto Withdrawal",
+  "Crypto deposit": "Crypto Deposit",
   "Crypto withdrawal": "Crypto Withdrawal",
   "Currency": "Currency",
   "Current password": "Current password",
@@ -156,8 +156,8 @@
   "Fee:": "Fee",
   "Fiat": "Fiat",
   "Fiat Balances": "Fiat Balances",
-  "Fiat Deposit": "Fiat Deposits",
-  "Fiat Withdrawal": "Fiat Withdrawals",
+  "Fiat Deposit": "Fiat Deposit",
+  "Fiat Withdrawal": "Fiat Withdrawal",
   "Fiat deposit": "Fiat Deposit",
   "Fiat withdrawal": "Fiat Withdrawal",
   "File not valid": "File is not valid",
