--- a/src/assets/i18n/dashboard/id.json
+++ b/src/assets/i18n/dashboard/id.json
@@ -455,7 +455,7 @@
   "Type": "Mengetik",
   "US Dollar": "US Dollar",
   "Unfortunately now you are not able to trade on this version of the website.": "Sayangnya sekarang Anda tidak dapat berdagang di versi situs web ini",
-  "Unfortunately, for this moment there is no opportunity to continue desired action on current version of site. Please, go to <a href=\"https://exrates.me\" class=\"link link--underline\" target=\"_blank\">exrates.me</a> to proceed your action.": "Sayangnya, saat ini tidak ada kesempatan untuk melanjutkan tindakan Anda pada versi situs web saat ini. Silakan, buka <a href=\"https://exrates.me\" class=\"link link--underline\" target=\"_blank\">exrates.me</a> untuk melanjutkan tindakan Anda.",
+  "Unfortunately, for this moment there is no opportunity to continue desired action on current version of site. Please, go to <a href=\"https://exrates.me\" class=\"link link--underline\" target=\"_blank\" rel=\"nofollow noopener noreferrer\">exrates.me</a> to proceed your action.": "Sayangnya, saat ini tidak ada kesempatan untuk melanjutkan tindakan Anda pada versi situs web saat ini. Silakan, buka <a href=\"https://exrates.me\" class=\"link link--underline\" target=\"_blank\" rel=\"nofollow noopener noreferrer\">exrates.me</a> untuk melanjutkan tindakan Anda.",
   "Update password": "Perbarui kata sandi",
   "Upload image of your face": "Unggah Foto Anda",
   "Use Google Authenticator to generate pincode": "Gunakan Google Authenticator untuk menghasilkan kode PIN",
